fixed scrolling on mobile

--- a/src/app/testimonial/testimonial.component.scss
+++ b/src/app/testimonial/testimonial.component.scss
@@ -1,3 +1,7 @@
+html{
+  max-height: 100%;
+}
+
 .h1{
     text-align: center;
 }
@@ -15,13 +19,17 @@
     margin-right: 2em;
     margin-top: 0;
     color: white;
-    
+
 }
 
 .mt-5, .my-5 {
-     margin-top: 0 !important; 
+     margin-top: 0 !important;
 }
 
 .carousel-indicators{
     display: none !important;
+}
+
+p{
+  text-align: left !important;
 }
